<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListDetail">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/food_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/food_item_title"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/food_item_points_and_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:text="TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/food_item_fat_and_callories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingBottom="12dp"
            android:text="TextView"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <TextView
            android:id="@+id/food_item_add_to_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_add"
            android:drawablePadding="5dp"
            android:drawableTint="@android:color/darker_gray"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/add_food_item_to_today"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/food_item_calc_from_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_calculate_24"
            android:drawablePadding="5dp"
            android:drawableTint="@android:color/darker_gray"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/menge_berechnen"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/food_item_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_edit_24"
            android:drawablePadding="5dp"
            android:drawableTint="@android:color/darker_gray"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/edit_current_food_item"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/food_item_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_delete_24"
            android:drawablePadding="5dp"
            android:drawableTint="@android:color/darker_gray"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingBottom="12dp"
            android:paddingTop="5dp"
            android:text="@string/delete_current_food_item"
            android:textSize="14sp" />


    </LinearLayout>

</FrameLayout>